# G-helper-linux

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  g-helper-linux.desktop
desktop/: g-helper-linux.desktop
docs/: ARCHITECTURE.md
qml/: Main.qml
qml/components/: ColorPicker.qml  DropdownSelect.qml  IconButton.qml  ModeButton.qml  ModeButtonGroup.qml  PercentSlider.qml  SectionHeader.qml  StatusDisplay.qml
qml/dialogs/: AboutDialog.qml  FanCurveDialog.qml
qml/panels/: BatteryPanel.qml  FanCurvePanel.qml  GpuPanel.qml  KeyboardPanel.qml  PerformancePanel.qml
qml/theme/: Theme.qml
resources/: resources.qrc
src/: main.cpp
src/controllers/: AuraController.cpp  AuraController.h  BatteryController.cpp  BatteryController.h  FanController.cpp  FanController.h  GpuController.cpp  GpuController.h  PerformanceController.cpp  PerformanceController.h  SlashController.cpp  SlashController.h  SystemMonitor.cpp  SystemMonitor.h
src/core/: Application.cpp  Application.h  Settings.cpp  Settings.h
src/dbus/: AsusdClient.cpp  AsusdClient.h  DBusTypes.h  DBusWatcher.cpp  DBusWatcher.h  SuperGfxClient.cpp  SuperGfxClient.h
src/models/: AuraModeModel.cpp  AuraModeModel.h  FanCurveModel.cpp  FanCurveModel.h
src/tray/: TrayManager.cpp  TrayManager.h
